# FanIME

./: .clang-format  .clangd  .gitignore  ActiveLanguageProfileNotifySink.cpp  BaseDictionaryEngine.cpp  BaseDictionaryEngine.h  BaseWindow.cpp  BaseWindow.h  ButtonWindow.cpp  CMakeDraft.txt  CMakeLists.txt  CandidateListUIPresenter.cpp  CandidateWindow.cpp  CandidateWindow.h  Compartment.cpp  Composition.cpp  CompositionProcessorEngine.cpp  CompositionProcessorEngine.h  Define.h  DictionaryParser.cpp  DictionaryParser.h  DictionarySearch.cpp  DictionarySearch.h  DisplayAttribute.cpp  DisplayAttributeInfo.cpp  DisplayAttributeProvider.cpp  DisplayString.h  DllMain.cpp  EditSession.cpp  EditSession.h  EndComposition.cpp  EnumDisplayAttributeInfo.cpp  EnumDisplayAttributeInfo.h  EnumTfCandidates.cpp  File.cpp  File.h  FileMapping.cpp  FunctionProviderSink.cpp  GetTextExtentEditSession.cpp  Globals.cpp  (+43 more)
assets/: helpcode.txt  pinyin.txt
sqlite/: sqlite3.lib
src/Candidate/: CandidateListUIPresenter.cpp  CandidateListUIPresenter.h  EnumTfCandidates.cpp  EnumTfCandidates.h  SearchCandidateProvider.cpp  SearchCandidateProvider.h  TipCandidateList.cpp  TipCandidateList.h  TipCandidateString.cpp  TipCandidateString.h
src/Compartment/: Compartment.cpp  Compartment.h
src/Composition/: Composition.cpp  CompositionProcessorEngine.cpp  CompositionProcessorEngine.h
src/DictEngine/: BaseDictionaryEngine.cpp  BaseDictionaryEngine.h  DictionaryParser.cpp  DictionarySearch.cpp  FanDictionaryDbUtils.cpp  FanDictionaryDbUtils.h  PinyinUtils.cpp  PinyinUtils.h  TableDictionaryEngine.cpp  TableDictionaryEngine.h
src/DisplayAttribute/: DisplayAttribute.cpp  DisplayAttributeInfo.cpp  DisplayAttributeInfo.h  DisplayAttributeProvider.cpp  DisplayString.h  EnumDisplayAttributeInfo.cpp
src/Drawing/: D2DSource.cpp  D2DSource.h
src/Edit/: EditSession.cpp  GetTextExtentEditSession.cpp  GetTextExtentEditSession.h  TextEditSink.cpp
src/File/: FileMapping.h
src/Global/: Globals.cpp  Globals.h
src/Header/: Define.h  resource.h
src/IME/: ActiveLanguageProfileNotifySink.cpp  SampleIME.cpp  SampleIME.h  SampleIME.rc
src/Key/: KeyEventSink.cpp  KeyHandler.cpp  KeyHandlerEditSession.cpp  KeyHandlerEditSession.h
src/Register/: RegKey.h  Register.cpp
src/Tf/: TfTextLayoutSink.cpp
src/Thread/: ThreadFocusSink.cpp
src/Utils/: FanyUtils.cpp  FanyUtils.h
src/Window/: BaseWindow.cpp  BaseWindow.h  ButtonWindow.cpp  ButtonWindow.h  CandidateWindow.cpp  CandidateWindow.h  ScrollBarWindow.h  ShadowWindow.cpp
