cmake_minimum_required(VERSION 3.25.0)

project(fanytsfime)

# http://www.utf8everywhere.org/
add_definitions(
    /D_UNICODE=1
    /DUNICODE=1
)

add_library(SampleIME SHARED
    "./ActiveLanguageProfileNotifySink.cpp"
    "./BaseDictionaryEngine.cpp"
    "./BaseDictionaryEngine.h"
    "./BaseWindow.cpp"
    "./BaseWindow.h"
    "./ButtonWindow.cpp"
    "./ButtonWindow.h"
    "./CandidateListUIPresenter.cpp"
    "./CandidateListUIPresenter.h"
    "./CandidateWindow.cpp"
    "./CandidateWindow.h"
    "./Compartment.cpp"
    "./Compartment.h"
    "./Composition.cpp"
    "./CompositionProcessorEngine.cpp"
    "./CompositionProcessorEngine.h"
    "./Define.h"
    "./DictionaryParser.cpp"
    "./DictionaryParser.h"
    "./DictionarySearch.cpp"
    "./DictionarySearch.h"
    "./DisplayAttribute.cpp"
    "./DisplayAttributeInfo.cpp"
    "./DisplayAttributeInfo.h"
    "./DisplayAttributeProvider.cpp"
    "./DisplayString.h"
    "./DllMain.cpp"
    "./EditSession.cpp"
    "./EditSession.h"
    "./EndComposition.cpp"
    "./EnumDisplayAttributeInfo.cpp"
    "./EnumDisplayAttributeInfo.h"
    "./EnumTfCandidates.cpp"
    "./EnumTfCandidates.h"
    "./File.cpp"
    "./File.h"
    "./FileMapping.cpp"
    "./FileMapping.h"
    "./FunctionProviderSink.cpp"
    "./GetTextExtentEditSession.cpp"
    "./GetTextExtentEditSession.h"
    "./Globals.cpp"
    "./Globals.h"
    "./KeyEventSink.cpp"
    "./KeyHandler.cpp"
    "./KeyHandlerEditSession.cpp"
    "./KeyHandlerEditSession.h"
    "./KeyStateCategory.cpp"
    "./KeyStateCategory.h"
    "./LanguageBar.cpp"
    "./LanguageBar.h"
    "./Private.h"
    "./Register.cpp"
    "./RegKey.cpp"
    "./RegKey.h"
    "./resource.h"
    "./SampleIME.cpp"
    "./SampleIME.def"
    "./SampleIME.h"
    "./SampleIME.rc"
    "./SampleIMEBaseStructure.cpp"
    "./SampleIMEBaseStructure.h"
    "./SampleIMEStructureArray.h"
    "./ScrollBarWindow.cpp"
    "./ScrollBarWindow.h"
    "./SearchCandidateProvider.cpp"
    "./SearchCandidateProvider.h"
    "./Server.cpp"
    "./ShadowWindow.cpp"
    "./ShadowWindow.h"
    "./StartComposition.cpp"
    "./stdafx.h"
    "./TableDictionaryEngine.cpp"
    "./TableDictionaryEngine.h"
    "./TextEditSink.cpp"
    "./TfInputProcessorProfile.cpp"
    "./TfInputProcessorProfile.h"
    "./TfTextLayoutSink.cpp"
    "./TfTextLayoutSink.h"
    "./ThreadFocusSink.cpp"
    "./ThreadMgrEventSink.cpp"
    "./TipCandidateList.cpp"
    "./TipCandidateList.h"
    "./TipCandidateString.cpp"
    "./TipCandidateString.h"
)

